--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -63,7 +63,7 @@ brew "pinentry-mac"
 brew "polipo"
 brew "postgresql"
 brew "pth"
-brew "ruby", link: true
+brew "ruby"
 brew "sbt"
 brew "shared-mime-info"
 brew "socat"
@@ -100,12 +100,10 @@ cask "gulp"
 cask "insomnia"
 cask "istat-menus"
 cask "iterm2"
-cask "java10"
 cask "java8"
 cask "jetbrains-toolbox"
 cask "kitematic"
 cask "lastfm"
-cask "neo4j"
 cask "omnigraffle"
 cask "plex-media-server"
 cask "plexamp"
@@ -121,10 +119,8 @@ cask "sublime-text"
 cask "telegram"
 cask "textual-beta"
 cask "tor-browser"
-cask "transmission"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
 cask "yourkit-java-profiler"
-cask "zoomus"
