--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,7 +3,6 @@ tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
-cask "java"
 brew "ack"
 brew "activemq"
 brew "adns"
@@ -45,9 +44,11 @@ brew "htop"
 brew "hub"
 brew "jenv"
 brew "jq"
+brew "jupyter"
 brew "leiningen"
 brew "libcroco"
 brew "libidn2"
+brew "libpq", link: true
 brew "librsvg"
 brew "libusb-compat"
 brew "libxml2"
@@ -61,7 +62,6 @@ brew "openvpn"
 brew "perl"
 brew "pinentry-mac"
 brew "polipo"
-brew "postgresql"
 brew "pth"
 brew "ruby"
 brew "sbt"
@@ -85,32 +85,26 @@ brew "zsh-completions"
 cask "1password"
 cask "alfred"
 cask "android-file-transfer"
+cask "bartender"
 cask "brackets"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
 cask "discord"
 cask "docker"
-cask "firefox-nightly"
+cask "firefox"
 cask "flux"
 cask "font-fira-code"
-cask "google-backup-and-sync"
 cask "google-chrome"
-cask "gulp"
 cask "insomnia"
 cask "istat-menus"
 cask "iterm2"
 cask "java8"
 cask "jetbrains-toolbox"
 cask "kitematic"
-cask "lastfm"
-cask "omnigraffle"
-cask "plex-media-server"
-cask "plexamp"
 cask "private-internet-access"
 cask "simple-comic"
 cask "slack"
-cask "smcfancontrol"
 cask "soda-player"
 cask "spectacle"
 cask "spotify"
@@ -118,9 +112,7 @@ cask "steam"
 cask "sublime-text"
 cask "telegram"
 cask "textual-beta"
-cask "tor-browser"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
-cask "yourkit-java-profiler"
