Install firefox nightly

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -93,6 +93,7 @@ cask "daisydisk"
 cask "discord"
 cask "docker"
 cask "firefox"
+cask "firefox-nightly"
 cask "flux"
 cask "font-fira-code"
 cask "google-chrome"
