Add pixelmator to installation

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -16,9 +16,9 @@ brew "cairo"
 brew "chruby"
 brew "coreutils"
 brew "cscope"
-brew "docker", link: false
+brew "docker"
 brew "docker-compose"
-brew "docker-machine", link: false
+brew "docker-machine"
 brew "docker-machine-completion"
 brew "docker-machine-driver-xhyve"
 brew "fribidi"
@@ -54,6 +54,7 @@ brew "libusb-compat"
 brew "libxml2"
 brew "lz4"
 brew "lzo"
+brew "mas"
 brew "maven"
 brew "mongodb"
 brew "nvm"
@@ -117,3 +118,4 @@ cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
+mas "com.pixelmatorteam.pixelmator", id: 407963104
