--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -69,6 +69,7 @@ brew "sbt"
 brew "shared-mime-info"
 brew "socat"
 brew "terminal-notifier"
+brew "terraform"
 brew "thefuck"
 brew "tig"
 brew "travis"
@@ -101,6 +102,7 @@ cask "google-chrome"
 cask "insomnia"
 cask "istat-menus"
 cask "iterm2"
+cask "java11"
 cask "java8"
 cask "jetbrains-toolbox"
 cask "kitematic"
@@ -118,4 +120,5 @@ cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
+cask "zoomus"
 mas "com.pixelmatorteam.pixelmator", id: 407963104
