Install Keynote and Numbers

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -121,4 +121,6 @@ cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
 cask "zoomus"
+mas "com.apple.iWork.Keynote", id: 409183694
+mas "com.apple.iWork.Numbers", id: 409203825
 mas "com.pixelmatorteam.pixelmator", id: 407963104
