--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,18 +6,21 @@ tap "homebrew/core"
 brew "ack"
 brew "activemq"
 brew "adns"
+brew "openssl"
 brew "ansible"
 brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "awscli"
 brew "bash"
+brew "glib"
+brew "lzo"
 brew "cairo"
 brew "chruby"
 brew "coreutils"
 brew "cscope"
-brew "docker"
-brew "docker-compose"
+brew "docker", link: false
+brew "docker-compose", link: false
 brew "docker-machine"
 brew "docker-machine-completion"
 brew "docker-machine-driver-xhyve"
@@ -44,6 +47,7 @@ brew "htop"
 brew "hub"
 brew "jenv"
 brew "jq"
+brew "pandoc"
 brew "jupyter"
 brew "leiningen"
 brew "libcroco"
@@ -53,7 +57,6 @@ brew "librsvg"
 brew "libusb-compat"
 brew "libxml2"
 brew "lz4"
-brew "lzo"
 brew "mas"
 brew "maven"
 brew "mongodb"
@@ -64,6 +67,7 @@ brew "perl"
 brew "pinentry-mac"
 brew "polipo"
 brew "pth"
+brew "pyenv"
 brew "ruby"
 brew "sbt"
 brew "shared-mime-info"
@@ -98,14 +102,16 @@ cask "firefox"
 cask "firefox-nightly"
 cask "flux"
 cask "font-fira-code"
+cask "font-open-sans"
 cask "google-chrome"
-cask "insomnia"
 cask "istat-menus"
 cask "iterm2"
 cask "java11"
 cask "java8"
 cask "jetbrains-toolbox"
 cask "kitematic"
+cask "pgadmin4"
+cask "postman"
 cask "private-internet-access"
 cask "simple-comic"
 cask "slack"
@@ -121,6 +127,6 @@ cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
 cask "zoomus"
-mas "com.apple.iWork.Keynote", id: 409183694
-mas "com.apple.iWork.Numbers", id: 409203825
-mas "com.pixelmatorteam.pixelmator", id: 407963104
+mas "Keynote", id: 409183694
+mas "Numbers", id: 409203825
+mas "Pixelmator", id: 407963104
