--- a/alfred/Alfred.alfredpreferences/preferences/local/d4e10c8b0a1e5eb76fa5d2af3b0a4196cb8866af/appearance/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/local/d4e10c8b0a1e5eb76fa5d2af3b0a4196cb8866af/appearance/prefs.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>currentthemeuid</key>
 	<string>6222F6C0-F9FA-4ECE-AEA8-C484E7BD4080</string>
+	<key>darkthemeuid</key>
+	<string>6222F6C0-F9FA-4ECE-AEA8-C484E7BD4080</string>
 </dict>
 </plist>
