--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,11 +6,12 @@ tap "homebrew/core"
 brew "ack"
 brew "activemq"
 brew "adns"
-brew "openssl"
+brew "openssl@1.1"
 brew "ansible"
 brew "autoconf"
 brew "autojump"
 brew "automake"
+brew "openssl"
 brew "awscli"
 brew "bash"
 brew "glib"
@@ -20,7 +21,7 @@ brew "chruby"
 brew "coreutils"
 brew "cscope"
 brew "docker", link: false
-brew "docker-compose", link: false
+brew "docker-compose"
 brew "docker-machine"
 brew "docker-machine-completion"
 brew "docker-machine-driver-xhyve"
@@ -31,6 +32,8 @@ brew "gd"
 brew "gdk-pixbuf"
 brew "git"
 brew "git-lfs"
+brew "git-secrets"
+brew "libidn2"
 brew "gnutls"
 brew "gnupg"
 brew "gobject-introspection"
@@ -51,7 +54,6 @@ brew "pandoc"
 brew "jupyter"
 brew "leiningen"
 brew "libcroco"
-brew "libidn2"
 brew "libpq", link: true
 brew "librsvg"
 brew "libusb-compat"
@@ -59,10 +61,9 @@ brew "libxml2"
 brew "lz4"
 brew "mas"
 brew "maven"
-brew "mongodb"
 brew "nvm"
-brew "openssl@1.1"
 brew "openvpn"
+brew "p7zip"
 brew "perl"
 brew "pinentry-mac"
 brew "polipo"
@@ -72,6 +73,8 @@ brew "ruby"
 brew "sbt"
 brew "shared-mime-info"
 brew "socat"
+brew "sshuttle"
+brew "telnet"
 brew "terminal-notifier"
 brew "terraform"
 brew "thefuck"
@@ -98,6 +101,7 @@ cask "calibre"
 cask "daisydisk"
 cask "discord"
 cask "docker"
+cask "filebot"
 cask "firefox"
 cask "firefox-nightly"
 cask "flux"
