--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,30 +3,33 @@ tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
+tap "warrensbox/tap"
 brew "ack"
 brew "activemq"
 brew "adns"
+brew "gmp"
 brew "openssl@1.1"
 brew "ansible"
 brew "autoconf"
 brew "autojump"
 brew "automake"
+brew "autossh"
 brew "awscli"
 brew "bash"
 brew "glib"
 brew "lzo"
-brew "openssl"
 brew "cairo"
 brew "chruby"
 brew "coreutils"
 brew "cscope"
+brew "go"
 brew "docker", link: false
-brew "docker-compose"
+brew "docker-compose", link: false
 brew "docker-machine"
 brew "docker-machine-completion"
 brew "docker-machine-driver-xhyve"
+brew "fish"
 brew "fribidi"
-brew "gmp"
 brew "gcc"
 brew "gd"
 brew "gdk-pixbuf"
@@ -51,7 +54,7 @@ brew "hub"
 brew "jenv"
 brew "jq"
 brew "pandoc"
-brew "jupyter"
+brew "jupyterlab"
 brew "leiningen"
 brew "libcroco"
 brew "libpq", link: true
@@ -76,7 +79,7 @@ brew "socat"
 brew "sshuttle"
 brew "telnet"
 brew "terminal-notifier"
-brew "terraform"
+brew "tfenv"
 brew "thefuck"
 brew "tig"
 brew "travis"
@@ -91,19 +94,21 @@ brew "youtube-dl"
 brew "zookeeper"
 brew "zsh"
 brew "zsh-completions"
+brew "warrensbox/tap/tfswitch"
 cask "1password"
 cask "alfred"
 cask "android-file-transfer"
+cask "aws-vault"
 cask "bartender"
 cask "brackets"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
+cask "dbeaver-community"
 cask "discord"
 cask "docker"
 cask "filebot"
 cask "firefox"
-cask "firefox-nightly"
 cask "flux"
 cask "font-fira-code"
 cask "font-open-sans"
@@ -114,7 +119,9 @@ cask "java11"
 cask "java8"
 cask "jetbrains-toolbox"
 cask "kitematic"
+cask "omnigraffle"
 cask "pgadmin4"
+cask "pock"
 cask "postman"
 cask "private-internet-access"
 cask "simple-comic"
@@ -126,6 +133,8 @@ cask "steam"
 cask "sublime-text"
 cask "telegram"
 cask "textual-beta"
+cask "time-out"
+cask "use-engine"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
@@ -133,4 +142,5 @@ cask "whatsapp"
 cask "zoomus"
 mas "Keynote", id: 409183694
 mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
 mas "Pixelmator", id: 407963104
