--- a/alfred/Alfred.alfredpreferences/workflows/user.workflow.250A222A-E677-46C0-9746-FDE573ABEC50/info.plist
+++ b/alfred/Alfred.alfredpreferences/workflows/user.workflow.250A222A-E677-46C0-9746-FDE573ABEC50/info.plist
@@ -6,19 +6,6 @@
 	<string>acb.cleardownloads</string>
 	<key>connections</key>
 	<dict>
-		<key>0F674DCD-9AA3-4E20-827D-4F8EB7FB7AB9</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>877AB5CA-B95D-42DB-87FC-22D47948809B</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
 		<key>53AFB0C4-A1B1-4D7C-93A3-C22334F57B40</key>
 		<array>
 			<dict>
@@ -32,8 +19,44 @@
 				<false/>
 			</dict>
 		</array>
+		<key>8136C4C9-0FE5-4863-9826-79B0AD55AC60</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>D7B776DC-A943-4442-B612-FDE9FA6C511E</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>877AB5CA-B95D-42DB-87FC-22D47948809B</key>
 		<array/>
+		<key>D14457E7-1038-4119-9BEE-F20C079F24B9</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>877AB5CA-B95D-42DB-87FC-22D47948809B</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
+				<string>D7B776DC-A943-4442-B612-FDE9FA6C511E</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 	</dict>
 	<key>createdby</key>
 	<string>Andrew Curtis-Black</string>
@@ -55,7 +78,7 @@
 				<key>script</key>
 				<string>mv ~/Downloads/* ~/.Trash</string>
 				<key>scriptargtype</key>
-				<integer>0</integer>
+				<integer>1</integer>
 				<key>scriptfile</key>
 				<string></string>
 				<key>type</key>
@@ -95,18 +118,62 @@
 				<key>argumenttype</key>
 				<integer>2</integer>
 				<key>keyword</key>
-				<string>throw</string>
+				<string>clean</string>
 				<key>subtext</key>
-				<string>Trash the contents of the Downloads folder</string>
+				<string>Trash the contents of the Downloads and Desktop folders</string>
 				<key>text</key>
-				<string>Clear downloads</string>
+				<string>Clean Downloads and desktop</string>
 				<key>withspace</key>
 				<false/>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.input.keyword</string>
 			<key>uid</key>
-			<string>0F674DCD-9AA3-4E20-827D-4F8EB7FB7AB9</string>
+			<string>D14457E7-1038-4119-9BEE-F20C079F24B9</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>63</integer>
+				<key>script</key>
+				<string>mv ~/Desktop/* ~/.Trash</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>D7B776DC-A943-4442-B612-FDE9FA6C511E</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argumenttype</key>
+				<integer>2</integer>
+				<key>keyword</key>
+				<string>throw</string>
+				<key>subtext</key>
+				<string>Trash the contents of the Desktop folder</string>
+				<key>text</key>
+				<string>Clear desktop</string>
+				<key>withspace</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.keyword</string>
+			<key>uid</key>
+			<string>8136C4C9-0FE5-4863-9826-79B0AD55AC60</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -115,13 +182,6 @@
 	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>0F674DCD-9AA3-4E20-827D-4F8EB7FB7AB9</key>
-		<dict>
-			<key>xpos</key>
-			<integer>300</integer>
-			<key>ypos</key>
-			<integer>140</integer>
-		</dict>
 		<key>53AFB0C4-A1B1-4D7C-93A3-C22334F57B40</key>
 		<dict>
 			<key>xpos</key>
@@ -129,12 +189,33 @@
 			<key>ypos</key>
 			<real>10</real>
 		</dict>
+		<key>8136C4C9-0FE5-4863-9826-79B0AD55AC60</key>
+		<dict>
+			<key>xpos</key>
+			<integer>300</integer>
+			<key>ypos</key>
+			<integer>250</integer>
+		</dict>
 		<key>877AB5CA-B95D-42DB-87FC-22D47948809B</key>
 		<dict>
 			<key>xpos</key>
 			<integer>500</integer>
 			<key>ypos</key>
 			<real>10</real>
+		</dict>
+		<key>D14457E7-1038-4119-9BEE-F20C079F24B9</key>
+		<dict>
+			<key>xpos</key>
+			<integer>300</integer>
+			<key>ypos</key>
+			<integer>130</integer>
+		</dict>
+		<key>D7B776DC-A943-4442-B612-FDE9FA6C511E</key>
+		<dict>
+			<key>xpos</key>
+			<integer>500</integer>
+			<key>ypos</key>
+			<integer>250</integer>
 		</dict>
 	</dict>
 	<key>webaddress</key>
