--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,21 +1,25 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
+tap "karun/old-openssl"
+tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
-brew "activemq"
 brew "adns"
-brew "gmp"
-brew "openssl@1.1"
 brew "ansible"
+brew "ansible-lint"
+brew "openjdk@11"
+brew "apache-spark"
 brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "autossh"
 brew "awscli"
 brew "bash"
+brew "bfg"
 brew "glib"
 brew "lzo"
 brew "cairo"
@@ -25,48 +29,50 @@ brew "cscope"
 brew "go"
 brew "docker", link: false
 brew "docker-compose", link: false
+brew "docker-credential-helper-ecr"
 brew "docker-machine"
 brew "docker-machine-completion"
 brew "docker-machine-driver-xhyve"
 brew "fish"
 brew "fribidi"
+brew "fzf"
+brew "gmp"
 brew "gcc"
 brew "gd"
 brew "gdk-pixbuf"
 brew "git"
 brew "git-lfs"
 brew "git-secrets"
+brew "libtool"
 brew "libidn2"
 brew "gnutls"
 brew "gnupg"
 brew "gobject-introspection"
 brew "gradle"
 brew "graphite2"
-brew "libtool"
+brew "icu4c"
+brew "harfbuzz"
 brew "graphviz"
 brew "groovy"
-brew "icu4c"
-brew "grunt-cli"
 brew "h2o"
-brew "harfbuzz"
 brew "htop"
 brew "hub"
 brew "jenv"
 brew "jq"
-brew "pandoc"
-brew "jupyterlab"
 brew "leiningen"
 brew "libcroco"
 brew "libpq", link: true
 brew "librsvg"
 brew "libusb-compat"
 brew "libxml2"
+brew "luajit"
 brew "lz4"
 brew "mas"
 brew "maven"
 brew "nvm"
 brew "openvpn"
 brew "p7zip"
+brew "pandoc"
 brew "perl"
 brew "pinentry-mac"
 brew "polipo"
@@ -74,15 +80,16 @@ brew "pth"
 brew "pyenv"
 brew "ruby"
 brew "sbt"
+brew "scala"
 brew "shared-mime-info"
 brew "socat"
 brew "sshuttle"
 brew "telnet"
 brew "terminal-notifier"
-brew "tfenv"
+brew "tfenv", link: false
 brew "thefuck"
 brew "tig"
-brew "travis"
+brew "travis", link: false
 brew "tree"
 brew "unrar"
 brew "vim"
@@ -91,18 +98,16 @@ brew "wget"
 brew "wxmac"
 brew "xhyve"
 brew "youtube-dl"
-brew "zookeeper"
-brew "zsh"
-brew "zsh-completions"
+brew "karun/old-openssl/openssl@1.0.2t"
 brew "warrensbox/tap/tfswitch"
 cask "1password"
 cask "alfred"
 cask "android-file-transfer"
 cask "aws-vault"
 cask "bartender"
-cask "brackets"
 cask "caffeine"
 cask "calibre"
+cask "ccmenu"
 cask "daisydisk"
 cask "dbeaver-community"
 cask "discord"
@@ -112,6 +117,8 @@ cask "firefox"
 cask "flux"
 cask "font-fira-code"
 cask "font-open-sans"
+cask "font-powerline-symbols"
+cask "font-source-code-pro"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
@@ -119,21 +126,22 @@ cask "java11"
 cask "java8"
 cask "jetbrains-toolbox"
 cask "kitematic"
+cask "obs"
 cask "omnigraffle"
+cask "openvpn-connect"
 cask "pgadmin4"
 cask "pock"
 cask "postman"
 cask "private-internet-access"
+cask "robo-3t"
 cask "simple-comic"
 cask "slack"
 cask "soda-player"
 cask "spectacle"
 cask "spotify"
 cask "steam"
-cask "sublime-text"
 cask "telegram"
 cask "textual-beta"
-cask "time-out"
 cask "use-engine"
 cask "vagrant"
 cask "visual-studio-code"
@@ -141,6 +149,7 @@ cask "vlc"
 cask "whatsapp"
 cask "zoomus"
 mas "Keynote", id: 409183694
+mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator", id: 407963104
