--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -43,6 +43,7 @@ brew "gdk-pixbuf"
 brew "git"
 brew "git-lfs"
 brew "git-secrets"
+brew "gnu-getopt"
 brew "libtool"
 brew "libidn2"
 brew "gnutls"
@@ -79,6 +80,7 @@ brew "polipo"
 brew "pth"
 brew "pyenv"
 brew "ruby"
+brew "s3cmd"
 brew "sbt"
 brew "scala"
 brew "shared-mime-info"
@@ -97,6 +99,7 @@ brew "watch"
 brew "wget"
 brew "wxmac"
 brew "xhyve"
+brew "yarn"
 brew "youtube-dl"
 brew "karun/old-openssl/openssl@1.0.2t"
 brew "warrensbox/tap/tfswitch"
@@ -126,6 +129,7 @@ cask "java11"
 cask "java8"
 cask "jetbrains-toolbox"
 cask "kitematic"
+cask "little-snitch"
 cask "obs"
 cask "omnigraffle"
 cask "openvpn-connect"
@@ -134,6 +138,7 @@ cask "pock"
 cask "postman"
 cask "private-internet-access"
 cask "robo-3t"
+cask "signal"
 cask "simple-comic"
 cask "slack"
 cask "soda-player"
@@ -147,7 +152,7 @@ cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
-cask "zoomus"
+cask "zoom"
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
