--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,6 +6,7 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "karun/old-openssl"
 tap "rbenv/tap"
+tap "teamookla/speedtest"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
@@ -26,6 +27,7 @@ brew "cairo"
 brew "chruby"
 brew "coreutils"
 brew "cscope"
+brew "libidn2"
 brew "go"
 brew "docker", link: false
 brew "docker-compose", link: false
@@ -33,6 +35,8 @@ brew "docker-credential-helper-ecr"
 brew "docker-machine"
 brew "docker-machine-completion"
 brew "docker-machine-driver-xhyve"
+brew "icu4c"
+brew "dotnet"
 brew "fish"
 brew "fribidi"
 brew "fzf"
@@ -45,14 +49,13 @@ brew "git-lfs"
 brew "git-secrets"
 brew "gnu-getopt"
 brew "libtool"
-brew "libidn2"
 brew "gnutls"
 brew "gnupg"
 brew "gobject-introspection"
 brew "gradle"
 brew "graphite2"
-brew "icu4c"
 brew "harfbuzz"
+brew "librsvg"
 brew "graphviz"
 brew "groovy"
 brew "h2o"
@@ -63,7 +66,6 @@ brew "jq"
 brew "leiningen"
 brew "libcroco"
 brew "libpq", link: true
-brew "librsvg"
 brew "libusb-compat"
 brew "libxml2"
 brew "luajit"
@@ -88,7 +90,7 @@ brew "socat"
 brew "sshuttle"
 brew "telnet"
 brew "terminal-notifier"
-brew "tfenv", link: false
+brew "tfenv"
 brew "thefuck"
 brew "tig"
 brew "travis", link: false
@@ -125,6 +127,7 @@ cask "font-source-code-pro"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
+cask "itsycal"
 cask "java11"
 cask "java8"
 cask "jetbrains-toolbox"
@@ -139,7 +142,6 @@ cask "robo-3t"
 cask "signal"
 cask "simple-comic"
 cask "slack"
-cask "soda-player"
 cask "spectacle"
 cask "spotify"
 cask "steam"
