--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -4,7 +4,6 @@ tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
-tap "karun/old-openssl"
 tap "rbenv/tap"
 tap "teamookla/speedtest"
 tap "warrensbox/tap"
@@ -31,7 +30,7 @@ brew "libidn2"
 brew "go"
 brew "docker", link: false
 brew "docker-compose", link: false
-brew "docker-credential-helper-ecr"
+brew "docker-credential-helper-ecr", link: false
 brew "docker-machine"
 brew "docker-machine-completion"
 brew "docker-machine-driver-xhyve"
@@ -103,7 +102,6 @@ brew "wxmac"
 brew "xhyve"
 brew "yarn"
 brew "youtube-dl"
-brew "karun/old-openssl/openssl@1.0.2t"
 brew "warrensbox/tap/tfswitch"
 cask "1password"
 cask "alfred"
@@ -127,7 +125,6 @@ cask "font-source-code-pro"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
-cask "itsycal"
 cask "java11"
 cask "java8"
 cask "jetbrains-toolbox"
