Remove more unused apps

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -85,6 +85,7 @@ brew "scala"
 brew "shared-mime-info"
 brew "socat"
 brew "sshuttle"
+brew "subversion"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
@@ -127,7 +128,6 @@ cask "java11"
 cask "java8"
 cask "jetbrains-toolbox"
 cask "kitematic"
-cask "omnigraffle"
 cask "openvpn-connect"
 cask "pgadmin4"
 cask "postman"
@@ -138,8 +138,7 @@ cask "slack"
 cask "spectacle"
 cask "spotify"
 cask "steam"
-cask "textual-beta"
-cask "use-engine"
+cask "textual"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
