--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -19,7 +19,6 @@ brew "autossh"
 brew "awscli"
 brew "bash"
 brew "bfg"
-brew "glib"
 brew "lzo"
 brew "cairo"
 brew "chruby"
@@ -27,7 +26,7 @@ brew "coreutils"
 brew "cscope"
 brew "libidn2"
 brew "docker", link: false
-brew "docker-compose", link: false
+brew "docker-compose"
 brew "docker-credential-helper-ecr", link: false
 brew "docker-machine", link: false
 brew "docker-machine-completion"
@@ -70,7 +69,6 @@ brew "mas"
 brew "maven"
 brew "nvm"
 brew "openjdk@8"
-brew "openvpn"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
@@ -125,7 +123,6 @@ cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kitematic"
-cask "openvpn-connect"
 cask "pgadmin4"
 cask "postman"
 cask "private-internet-access"
@@ -141,6 +138,7 @@ cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
 cask "zoom"
+mas "GarageBand", id: 682658836
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
