--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -82,6 +82,7 @@ brew "sbt"
 brew "scala"
 brew "shared-mime-info"
 brew "socat"
+brew "spatialindex"
 brew "sshuttle"
 brew "subversion"
 brew "telnet"
