--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -22,11 +22,14 @@ brew "bfg"
 brew "lzo"
 brew "cairo"
 brew "chruby"
+brew "cocoapods"
 brew "coreutils"
 brew "cscope"
 brew "libidn2"
+brew "openldap"
+brew "curl"
 brew "docker", link: false
-brew "docker-compose"
+brew "docker-compose", link: false
 brew "docker-credential-helper-ecr", link: false
 brew "docker-machine", link: false
 brew "docker-machine-completion"
@@ -52,7 +55,9 @@ brew "gobject-introspection"
 brew "gradle"
 brew "graphite2"
 brew "harfbuzz"
+brew "librsvg"
 brew "graphviz"
+brew "grep"
 brew "groovy"
 brew "htop"
 brew "hub"
@@ -67,6 +72,7 @@ brew "luajit"
 brew "lz4"
 brew "mas"
 brew "maven"
+brew "node"
 brew "nvm"
 brew "openjdk@8"
 brew "p7zip"
@@ -90,7 +96,7 @@ brew "terminal-notifier"
 brew "tfenv"
 brew "thefuck"
 brew "tig"
-brew "travis", link: false
+brew "travis"
 brew "tree"
 brew "vim"
 brew "watch"
@@ -99,12 +105,15 @@ brew "wxmac"
 brew "xhyve"
 brew "yarn"
 brew "youtube-dl"
+brew "rbenv/tap/openssl@1.0"
 brew "warrensbox/tap/tfswitch"
 cask "1password"
+cask "adoptopenjdk8"
 cask "alfred"
 cask "android-file-transfer"
 cask "aws-vault"
 cask "bartender"
+cask "brave-browser"
 cask "caffeine"
 cask "calibre"
 cask "ccmenu"
@@ -114,6 +123,7 @@ cask "discord"
 cask "docker"
 cask "filebot"
 cask "firefox"
+cask "flutter"
 cask "flux"
 cask "font-fira-code"
 cask "font-open-sans"
@@ -126,6 +136,7 @@ cask "jetbrains-toolbox"
 cask "kitematic"
 cask "pgadmin4"
 cask "postman"
+cask "powershell"
 cask "private-internet-access"
 cask "robo-3t"
 cask "signal"
@@ -133,16 +144,18 @@ cask "slack"
 cask "spectacle"
 cask "spotify"
 cask "steam"
+cask "telegram"
 cask "textual"
+cask "toggl-track"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
 cask "zoom"
-mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator", id: 407963104
+mas "Xcode", id: 497799835
