--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -32,7 +32,7 @@ brew "curl"
 brew "docker"
 brew "docker-compose"
 brew "docker-credential-helper-ecr"
-brew "docker-machine", restart_service: true
+brew "docker-machine"
 brew "icu4c"
 brew "dotnet"
 brew "fish"
