--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -115,12 +115,10 @@ cask "bartender"
 cask "brave-browser"
 cask "caffeine"
 cask "calibre"
-cask "ccmenu"
 cask "daisydisk"
 cask "dbeaver-community"
 cask "discord"
 cask "docker"
-cask "filebot"
 cask "firefox"
 cask "flutter"
 cask "flux"
@@ -134,16 +132,15 @@ cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kitematic"
+cask "obs"
 cask "pgadmin4"
 cask "postman"
 cask "powershell"
-cask "private-internet-access"
 cask "robo-3t"
 cask "signal"
 cask "slack"
 cask "spectacle"
 cask "spotify"
-cask "steam"
 cask "telegram"
 cask "textual"
 cask "toggl-track"
