--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -118,7 +118,6 @@ cask "calibre"
 cask "daisydisk"
 cask "dbeaver-community"
 cask "discord"
-cask "docker"
 cask "firefox"
 cask "flutter"
 cask "flux"
@@ -136,6 +135,7 @@ cask "obs"
 cask "pgadmin4"
 cask "postman"
 cask "powershell"
+cask "protonvpn"
 cask "robo-3t"
 cask "signal"
 cask "slack"
