--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -100,7 +100,6 @@ brew "tree"
 brew "vim"
 brew "watch"
 brew "wget"
-brew "wxmac"
 brew "xhyve"
 brew "yarn"
 brew "youtube-dl"
@@ -118,6 +117,7 @@ cask "calibre"
 cask "daisydisk"
 cask "dbeaver-community"
 cask "discord"
+cask "docker"
 cask "firefox"
 cask "flutter"
 cask "flux"
@@ -148,6 +148,7 @@ cask "vagrant"
 cask "virtualbox"
 cask "visual-studio-code"
 cask "vlc"
+cask "webex"
 cask "whatsapp"
 cask "zoom"
 mas "Keynote", id: 409183694
