--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -24,21 +24,18 @@ brew "lzo"
 brew "cairo"
 brew "chruby"
 brew "cocoapods"
+brew "gmp"
 brew "coreutils"
 brew "cscope"
 brew "libidn2"
 brew "openldap"
 brew "curl"
-brew "docker"
-brew "docker-compose"
 brew "docker-credential-helper-ecr"
-brew "docker-machine"
 brew "icu4c"
 brew "dotnet"
 brew "fish"
 brew "fribidi"
 brew "fzf"
-brew "gmp"
 brew "gcc"
 brew "gd"
 brew "gdk-pixbuf"
@@ -78,9 +75,9 @@ brew "p7zip"
 brew "pandoc"
 brew "perl"
 brew "pinentry-mac"
-brew "polipo"
 brew "pth"
 brew "pyenv"
+brew "pyenv-virtualenv"
 brew "ruby"
 brew "s3cmd"
 brew "sbt"
@@ -137,6 +134,7 @@ cask "postman"
 cask "powershell"
 cask "protonvpn"
 cask "robo-3t"
+cask "shortcutdetective"
 cask "signal"
 cask "slack"
 cask "spectacle"
@@ -150,9 +148,5 @@ cask "vlc"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
-mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
-mas "Numbers", id: 409203825
-mas "Pages", id: 409201541
 mas "Pixelmator", id: 407963104
-mas "Xcode", id: 497799835
