--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -69,7 +69,6 @@ brew "lz4"
 brew "mas"
 brew "maven"
 brew "node"
-brew "nvm"
 brew "openjdk@8"
 brew "p7zip"
 brew "pandoc"
@@ -147,5 +146,11 @@ cask "vlc"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
+mas "GarageBand", id: 682658836
+mas "iMovie", id: 408981434
+mas "JSONPlistBuddy", id: 1574947481
+mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
 mas "Pixelmator", id: 407963104
