--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -128,6 +128,7 @@ cask "jetbrains-toolbox"
 cask "kitematic"
 cask "obs"
 cask "pgadmin4"
+cask "pop"
 cask "postman"
 cask "powershell"
 cask "protonvpn"
