--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -33,6 +33,7 @@ brew "curl"
 brew "docker-credential-helper-ecr"
 brew "icu4c"
 brew "dotnet"
+brew "elm"
 brew "fish"
 brew "fribidi"
 brew "fzf"
@@ -126,6 +127,7 @@ cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kitematic"
+cask "logitech-options"
 cask "obs"
 cask "pgadmin4"
 cask "pop"
