--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -33,7 +33,6 @@ brew "curl"
 brew "docker-credential-helper-ecr"
 brew "icu4c"
 brew "dotnet"
-brew "elm"
 brew "fish"
 brew "fribidi"
 brew "fzf"
@@ -143,6 +142,7 @@ cask "spotify"
 cask "telegram"
 cask "textual"
 cask "toggl-track"
+cask "tuple"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
