--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -157,4 +157,4 @@ mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
-mas "Pixelmator", id: 407963104
+mas "Pixelmator Pro", id: 1289583905
