--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -32,7 +32,7 @@ brew "cscope"
 brew "libidn2"
 brew "openldap"
 brew "curl"
-brew "docker-credential-helper-ecr", link: false
+brew "docker-credential-helper-ecr"
 brew "icu4c"
 brew "dotnet"
 brew "fish"
@@ -157,3 +157,4 @@ mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
+mas "Xcode", id: 497799835
