--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -159,3 +159,4 @@ mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
+mas "Xcode", id: 497799835
