--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -33,7 +33,7 @@ brew "cscope"
 brew "libidn2"
 brew "openldap"
 brew "curl"
-brew "docker-credential-helper-ecr", link: false
+brew "docker-credential-helper-ecr"
 brew "icu4c"
 brew "dotnet"
 brew "fish"
@@ -54,6 +54,7 @@ brew "gobject-introspection"
 brew "gradle"
 brew "graphite2"
 brew "harfbuzz"
+brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -80,7 +81,6 @@ brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
-brew "ruby"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -153,9 +153,6 @@ cask "vlc"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
-mas "GarageBand", id: 682658836
-mas "iMovie", id: 408981434
-mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
