--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -112,7 +112,6 @@ cask "brave-browser"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
-cask "dbeaver-community"
 cask "discord"
 cask "docker"
 cask "firefox"
@@ -141,6 +140,7 @@ cask "signal"
 cask "slack"
 cask "spectacle"
 cask "spotify"
+cask "tableplus"
 cask "telegram"
 cask "textual"
 cask "toggl-track"
