--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -31,6 +31,7 @@ brew "cscope"
 brew "libidn2"
 brew "openldap"
 brew "curl"
+brew "difftastic"
 brew "docker-credential-helper-ecr", link: false
 brew "icu4c"
 brew "dotnet"
@@ -60,6 +61,8 @@ brew "htop"
 brew "hub"
 brew "jenv"
 brew "jq"
+brew "lazydocker"
+brew "lazygit"
 brew "leiningen"
 brew "libcroco"
 brew "libpq", link: true
@@ -91,8 +94,9 @@ brew "subversion"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
+brew "tflint"
 brew "thefuck"
-brew "tig"
+brew "tldr"
 brew "travis"
 brew "tree"
 brew "vim"
@@ -127,7 +131,6 @@ cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kitematic"
-cask "logitech-options"
 cask "obs"
 cask "pgadmin4"
 cask "pop"
