--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -30,12 +30,12 @@ brew "coreutils"
 brew "cscope"
 brew "libidn2"
 brew "openldap"
-brew "curl"
 brew "difftastic"
 brew "docker-credential-helper-ecr", link: false
 brew "icu4c"
 brew "dotnet"
 brew "fish"
+brew "libtool"
 brew "fribidi"
 brew "fzf"
 brew "gcc"
@@ -45,7 +45,6 @@ brew "git"
 brew "git-lfs"
 brew "git-secrets"
 brew "gnu-getopt"
-brew "libtool"
 brew "gnutls"
 brew "gnupg"
 brew "go"
@@ -77,6 +76,7 @@ brew "openjdk@8"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
+brew "php"
 brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
