--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -129,7 +129,9 @@ cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kitematic"
+cask "librewolf"
 cask "obs"
+cask "omnigraffle"
 cask "pgadmin4"
 cask "pop"
 cask "postman"
