--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,14 +9,11 @@ tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
-brew "ansible"
-brew "ansible-lint"
 brew "apache-spark"
 brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "autossh"
-brew "aws-vault", link: false
 brew "awscli"
 brew "bash"
 brew "bfg"
@@ -31,11 +28,12 @@ brew "coreutils"
 brew "cscope"
 brew "libidn2"
 brew "openldap"
-brew "curl"
-brew "docker-credential-helper-ecr"
+brew "difftastic"
+brew "docker-credential-helper-ecr", link: false
 brew "icu4c"
 brew "dotnet"
 brew "fish"
+brew "libtool"
 brew "fribidi"
 brew "fzf"
 brew "gcc"
@@ -45,7 +43,6 @@ brew "git"
 brew "git-lfs"
 brew "git-secrets"
 brew "gnu-getopt"
-brew "libtool"
 brew "gnutls"
 brew "gnupg"
 brew "go"
@@ -53,7 +50,6 @@ brew "gobject-introspection"
 brew "gradle"
 brew "graphite2"
 brew "harfbuzz"
-brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -62,6 +58,8 @@ brew "htop"
 brew "hub"
 brew "jenv"
 brew "jq"
+brew "lazydocker"
+brew "lazygit"
 brew "leiningen"
 brew "libcroco"
 brew "libpq", link: true
@@ -77,10 +75,12 @@ brew "openjdk@8"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
+brew "php"
 brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "ruby"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -93,8 +93,9 @@ brew "subversion"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
+brew "tflint"
 brew "thefuck"
-brew "tig"
+brew "tldr"
 brew "travis"
 brew "tree"
 brew "vim"
@@ -114,7 +115,6 @@ cask "brave-browser"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
-cask "dbeaver-community"
 cask "discord"
 cask "docker"
 cask "firefox"
@@ -130,8 +130,9 @@ cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kitematic"
-cask "logitech-options"
+cask "librewolf"
 cask "obs"
+cask "omnigraffle"
 cask "pgadmin4"
 cask "pop"
 cask "postman"
@@ -143,16 +144,19 @@ cask "signal"
 cask "slack"
 cask "spectacle"
 cask "spotify"
+cask "tableplus"
 cask "telegram"
 cask "textual"
 cask "toggl-track"
-cask "tuple"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
+mas "GarageBand", id: 682658836
+mas "iMovie", id: 408981434
+mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
