--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -19,7 +19,6 @@ brew "bash"
 brew "bfg"
 brew "glib"
 brew "lzo"
-brew "python@3.9"
 brew "cairo"
 brew "chruby"
 brew "cocoapods"
@@ -129,6 +128,7 @@ cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
+cask "kindle"
 cask "kitematic"
 cask "librewolf"
 cask "obs"
