--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,16 +9,20 @@ tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
+brew "ansible"
+brew "ansible-lint"
 brew "apache-spark"
 brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "autossh"
+brew "aws-vault", link: false
 brew "awscli"
 brew "bash"
 brew "bfg"
 brew "glib"
 brew "lzo"
+brew "python@3.9"
 brew "cairo"
 brew "chruby"
 brew "cocoapods"
@@ -27,12 +31,11 @@ brew "coreutils"
 brew "cscope"
 brew "libidn2"
 brew "openldap"
-brew "difftastic"
-brew "docker-credential-helper-ecr", link: false
+brew "curl"
+brew "docker-credential-helper-ecr"
 brew "icu4c"
 brew "dotnet"
 brew "fish"
-brew "libtool"
 brew "fribidi"
 brew "fzf"
 brew "gcc"
@@ -42,6 +45,7 @@ brew "git"
 brew "git-lfs"
 brew "git-secrets"
 brew "gnu-getopt"
+brew "libtool"
 brew "gnutls"
 brew "gnupg"
 brew "go"
@@ -49,6 +53,7 @@ brew "gobject-introspection"
 brew "gradle"
 brew "graphite2"
 brew "harfbuzz"
+brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -57,8 +62,6 @@ brew "htop"
 brew "hub"
 brew "jenv"
 brew "jq"
-brew "lazydocker"
-brew "lazygit"
 brew "leiningen"
 brew "libcroco"
 brew "libpq", link: true
@@ -74,12 +77,10 @@ brew "openjdk@8"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
-brew "php"
 brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
-brew "ruby"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -92,9 +93,8 @@ brew "subversion"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
-brew "tflint"
 brew "thefuck"
-brew "tldr"
+brew "tig"
 brew "travis"
 brew "tree"
 brew "vim"
@@ -114,6 +114,7 @@ cask "brave-browser"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
+cask "dbeaver-community"
 cask "discord"
 cask "docker"
 cask "firefox"
@@ -128,11 +129,9 @@ cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
-cask "kindle"
 cask "kitematic"
-cask "librewolf"
+cask "logitech-options"
 cask "obs"
-cask "omnigraffle"
 cask "pgadmin4"
 cask "pop"
 cask "postman"
@@ -144,19 +143,16 @@ cask "signal"
 cask "slack"
 cask "spectacle"
 cask "spotify"
-cask "tableplus"
 cask "telegram"
 cask "textual"
 cask "toggl-track"
+cask "tuple"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
-mas "GarageBand", id: 682658836
-mas "iMovie", id: 408981434
-mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
