--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -35,12 +35,15 @@ brew "fish"
 brew "libtool"
 brew "fribidi"
 brew "fzf"
+brew "lz4"
 brew "gcc"
 brew "gd"
 brew "gdk-pixbuf"
 brew "git"
+brew "git-filter-repo"
 brew "git-lfs"
 brew "git-secrets"
+brew "git-sizer"
 brew "gnu-getopt"
 brew "gnutls"
 brew "gnupg"
@@ -65,7 +68,6 @@ brew "libpq", link: true
 brew "libusb-compat"
 brew "libxml2"
 brew "luajit"
-brew "lz4"
 brew "mas"
 brew "maven"
 brew "node"
