--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -97,8 +97,8 @@ brew "thefuck"
 brew "tig"
 brew "travis"
 brew "tree"
+brew "viddy"
 brew "vim"
-brew "watch"
 brew "wget"
 brew "xhyve"
 brew "yarn"
