--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,20 +9,16 @@ tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
-brew "ansible"
-brew "ansible-lint"
 brew "apache-spark"
 brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "autossh"
-brew "aws-vault", link: false
 brew "awscli"
 brew "bash"
 brew "bfg"
 brew "glib"
 brew "lzo"
-brew "python@3.9"
 brew "cairo"
 brew "chruby"
 brew "cocoapods"
@@ -31,11 +27,12 @@ brew "coreutils"
 brew "cscope"
 brew "libidn2"
 brew "openldap"
-brew "curl"
-brew "docker-credential-helper-ecr"
+brew "difftastic"
+brew "docker-credential-helper-ecr", link: false
 brew "icu4c"
 brew "dotnet"
 brew "fish"
+brew "libtool"
 brew "fribidi"
 brew "fzf"
 brew "lz4"
@@ -43,18 +40,18 @@ brew "gcc"
 brew "gd"
 brew "gdk-pixbuf"
 brew "git"
+brew "git-filter-repo"
 brew "git-lfs"
 brew "git-secrets"
+brew "git-sizer"
 brew "gnu-getopt"
-brew "libtool"
-brew "gnutls", link: false
+brew "gnutls"
 brew "gnupg"
 brew "go"
 brew "gobject-introspection"
 brew "gradle"
 brew "graphite2"
 brew "harfbuzz"
-brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -63,6 +60,8 @@ brew "htop"
 brew "hub"
 brew "jenv"
 brew "jq"
+brew "lazydocker"
+brew "lazygit"
 brew "leiningen"
 brew "libcroco"
 brew "libpq", link: true
@@ -77,10 +76,12 @@ brew "openjdk@8"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
+brew "php"
 brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "ruby"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -93,8 +94,9 @@ brew "subversion"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
+brew "tflint"
 brew "thefuck"
-brew "tig"
+brew "tldr"
 brew "travis"
 brew "tree"
 brew "viddy"
@@ -114,7 +116,6 @@ cask "brave-browser"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
-cask "dbeaver-community"
 cask "discord"
 cask "docker"
 cask "firefox"
@@ -129,9 +130,11 @@ cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
+cask "kindle"
 cask "kitematic"
-cask "logitech-options"
+cask "librewolf"
 cask "obs"
+cask "omnigraffle"
 cask "pgadmin4"
 cask "pop"
 cask "postman"
@@ -143,10 +146,10 @@ cask "signal"
 cask "slack"
 cask "spectacle"
 cask "spotify"
+cask "tableplus"
 cask "telegram"
 cask "textual"
 cask "toggl-track"
-cask "tuple"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
