--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -35,6 +35,7 @@ brew "openldap"
 brew "curl"
 brew "docker-credential-helper-ecr"
 brew "icu4c"
+brew "difftastic"
 brew "dotnet"
 brew "fish"
 brew "fribidi"
@@ -74,6 +75,7 @@ brew "maven"
 brew "node"
 brew "openjdk@11"
 brew "openjdk@8"
+brew "openssl@3"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
@@ -131,6 +133,8 @@ cask "iterm2"
 cask "jetbrains-toolbox"
 cask "kitematic"
 cask "logitech-options"
+cask "librewolf"
+cask "notion"
 cask "obs"
 cask "pgadmin4"
 cask "pop"
