--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,20 +9,16 @@ tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
-brew "ansible"
-brew "ansible-lint"
 brew "apache-spark"
 brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "autossh"
-brew "aws-vault", link: false
 brew "awscli"
 brew "bash"
 brew "bfg"
 brew "glib"
 brew "lzo"
-brew "python@3.9"
 brew "cairo"
 brew "chruby"
 brew "cocoapods"
@@ -32,22 +28,22 @@ brew "cscope"
 brew "libidn2"
 brew "lz4"
 brew "openldap"
-brew "curl"
-brew "docker-credential-helper-ecr"
-brew "icu4c"
 brew "difftastic"
+brew "docker-credential-helper-ecr", link: false
 brew "dotnet"
 brew "fish"
+brew "libtool"
 brew "fribidi"
 brew "fzf"
 brew "gcc"
 brew "gd"
 brew "gdk-pixbuf"
 brew "git"
+brew "git-filter-repo"
 brew "git-lfs"
 brew "git-secrets"
+brew "git-sizer"
 brew "gnu-getopt"
-brew "libtool"
 brew "gnutls"
 brew "gnupg"
 brew "go"
@@ -55,7 +51,6 @@ brew "gobject-introspection"
 brew "gradle"
 brew "graphite2"
 brew "harfbuzz"
-brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -64,6 +59,8 @@ brew "htop"
 brew "hub"
 brew "jenv"
 brew "jq"
+brew "lazydocker"
+brew "lazygit"
 brew "leiningen"
 brew "libcroco"
 brew "libpq", link: true
@@ -79,10 +76,12 @@ brew "openssl@3"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
+brew "php"
 brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "ruby"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -95,12 +94,13 @@ brew "subversion"
 brew "telnet"
 brew "terminal-notifier"
 brew "tfenv"
+brew "tflint"
 brew "thefuck"
-brew "tig"
+brew "tldr"
 brew "travis"
 brew "tree"
+brew "viddy"
 brew "vim"
-brew "watch"
 brew "wget"
 brew "xhyve"
 brew "yarn"
@@ -116,7 +116,6 @@ cask "brave-browser"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
-cask "dbeaver-community"
 cask "discord"
 cask "docker"
 cask "firefox"
@@ -131,11 +130,12 @@ cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "jetbrains-toolbox"
+cask "kindle"
 cask "kitematic"
-cask "logitech-options"
 cask "librewolf"
 cask "notion"
 cask "obs"
+cask "omnigraffle"
 cask "pgadmin4"
 cask "pop"
 cask "postman"
@@ -147,16 +147,19 @@ cask "signal"
 cask "slack"
 cask "spectacle"
 cask "spotify"
+cask "tableplus"
 cask "telegram"
 cask "textual"
 cask "toggl-track"
-cask "tuple"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vlc"
 cask "webex"
 cask "whatsapp"
 cask "zoom"
+mas "GarageBand", id: 682658836
+mas "iMovie", id: 408981434
+mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
