Move to viddy, bat and fd

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -21,6 +21,7 @@ brew "automake"
 brew "autossh"
 brew "awscli"
 brew "bash"
+brew "bat"
 brew "bfg"
 brew "chruby"
 brew "cocoapods"
@@ -33,6 +34,7 @@ brew "openldap"
 brew "difftastic"
 brew "docker-credential-helper-ecr", link: false
 brew "dotnet"
+brew "fd"
 brew "fish"
 brew "libtool"
 brew "fribidi"
