--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -113,13 +113,13 @@ cask "1password"
 cask "alfred"
 cask "android-file-transfer"
 cask "aws-vault"
-cask "bartender"
 cask "brave-browser"
 cask "caffeine"
 cask "calibre"
 cask "daisydisk"
 cask "discord"
 cask "docker"
+cask "dozer"
 cask "firefox"
 cask "flutter"
 cask "flux"
