--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -138,16 +138,15 @@ cask "librewolf"
 cask "notion"
 cask "obs"
 cask "omnigraffle"
-cask "pgadmin4"
 cask "pop"
 cask "postman"
 cask "powershell"
 cask "protonvpn"
+cask "rectangle"
 cask "robo-3t"
 cask "shortcutdetective"
 cask "signal"
 cask "slack"
-cask "spectacle"
 cask "spotify"
 cask "tableplus"
 cask "telegram"
