--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,18 +9,19 @@ tap "rbenv/tap"
 tap "warrensbox/tap"
 brew "ack"
 brew "adns"
+brew "lz4"
 brew "glib"
 brew "lzo"
+brew "python@3.9"
 brew "cairo"
 brew "graphite2"
+brew "icu4c"
 brew "harfbuzz"
-brew "lz4"
 brew "apache-spark"
 brew "autoconf"
 brew "autojump"
 brew "automake"
 brew "autossh"
-brew "python@3.11"
 brew "awscli"
 brew "bash"
 brew "bat"
@@ -49,11 +50,12 @@ brew "git-lfs"
 brew "git-secrets"
 brew "git-sizer"
 brew "gnu-getopt"
-brew "gnutls"
+brew "gnutls", link: false
 brew "gnupg"
 brew "go"
 brew "gobject-introspection"
 brew "gradle"
+brew "pango"
 brew "librsvg"
 brew "graphviz"
 brew "grep"
@@ -75,7 +77,6 @@ brew "maven"
 brew "node"
 brew "openjdk@11"
 brew "openjdk@8"
-brew "openssl@3"
 brew "p7zip"
 brew "pandoc"
 brew "perl"
@@ -84,7 +85,6 @@ brew "pinentry-mac"
 brew "pth"
 brew "pyenv"
 brew "pyenv-virtualenv"
-brew "ruby"
 brew "rust"
 brew "s3cmd"
 brew "sbt"
@@ -148,6 +148,7 @@ cask "robo-3t"
 cask "shortcutdetective"
 cask "signal"
 cask "slack"
+cask "spectacle"
 cask "spotify"
 cask "tableplus"
 cask "telegram"
