--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -164,6 +164,7 @@ mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "JSONPlistBuddy", id: 1574947481
 mas "Keynote", id: 409183694
+mas "Luminar AI", id: 1541310539
 mas "Meeter", id: 1510445899
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
